--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -16,5 +16,11 @@
   <div id="container">
     <strong>Ready to create an app?</strong>
     <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <ion-buttons>
+      <ion-button expand="block" color="primary" href="userslist">
+        <ion-icon name="logo-ionic" slot="start"></ion-icon>
+        Go to Characters List
+      </ion-button>
+    </ion-buttons>
   </div>
 </ion-content>
